fixed text wrapping issue and strange placement

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,11 +144,11 @@ section {
 .header-content{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 100%;
-  padding-left: 1rem;
-  padding-right: 4rem;
+  margin-top: 30px;
+  margin-right: 40px;
 }
 .header-content  .left-header{
+      margin-top: 20px;
       display: flex;
       align-items: center;
       position: relative;
@@ -156,7 +156,8 @@ section {
 .header-content .left-header .h-shape{
           transition: all .4s ease-in-out;
           width: 100%;
-          height: 100%;
+          height: 70%;
+          max-height: 450px;
           background-color: var(--color-secondary);
           position: absolute;
           left: 0;
@@ -193,6 +194,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-right: 2rem;
 }
 
 .header-content .name{
@@ -203,8 +205,12 @@ section {
   color: var(--color-secondary);
 }
 
+.header-content h1{
+
+  line-height: 3rem;
+}
 .header-content p{
-  margin: 1.5rem 0;
+  margin: 10px;
   line-height: 2rem;
 }
 
